# lessanvil

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release-cli.yml  release.yml
cli/: .dockerignore  Cargo.toml  Dockerfile  README.md
cli/src/: main.rs
gui/: Cargo.toml
gui/src/: main.rs
src/: lib.rs  main.rs
