[package]
name = "lessanvil"
version = "1.0.0"
authors = ["icrayix"]
edition = "2021"
license = "MIT"
description = "Small CLI for reducing a Minecraft: Java Edition's world size by removing unused chunks."
repository = "https://github.com/icrayix/lessanvil"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0.40"
serde = "1.0.159"
rayon = "1.7.0"
fastanvil = { version = "0.28.0", default-features = false }
fastnbt = "2.3.2"

# features for the binary only
anstream = { version = "0.2.6", optional = true }
clap = { version = "4.1.1", features = ["derive"], optional = true }
ctrlc = { version = "3.4.0", optional = true }
dialoguer = { version = "0.10.3", default-features = false, optional = true}
env_logger = { version = "0.10.0", optional = true }
indicatif = { version = "0.17.3", optional = true }
log = { version = "0.4.17", optional = true }
owo-colors = { version = "3.5.0", optional = true }
serde_json = { version = "1.0.95", optional = true }

[features]
cli = ["dep:anstream", "dep:clap", "dep:ctrlc", "dep:dialoguer", "dep:env_logger", "dep:indicatif", "dep:log", "dep:owo-colors", "dep:serde_json"]

[[bin]]
name = "lessanvil"
required-features = ["cli"]
