[package]
name = "lessanvil"
version = "1.0.2"
authors = ["icrayix"]
edition = "2021"
license = "MIT"
description = "Library for reducing a Minecraft: Java Edition's world size by removing unused chunks."
repository = "https://github.com/icrayix/lessanvil"
readme = "README.md"

[dependencies]
thiserror = "1.0.40"
serde = "1.0.159"
rayon = "1.7.0"
fastanvil = { version = "0.28.0", default-features = false }
fastnbt = "2.3.2"

[workspace]
members = ["cli"]

[workspace.package]
repository = "https://github.com/icrayix/lessanvil"
readme = "README.md"
edition = "2021"
license = "MIT"

[profile.release]
strip = "debuginfo"


