[package]
name = "lessanvil"
version = "1.0.2"
authors = ["icrayix"]
edition = "2021"
license = "MIT"
description = "Library for reducing a Minecraft: Java Edition's world size by removing unused chunks."
repository = "https://github.com/icrayix/lessanvil"
readme = "README.md"

[dependencies]
thiserror = "1.0.48"
serde = "1.0.188"
rayon = "1.7.0"
fastanvil = { version = "0.29.0", default-features = false }
fastnbt = "2.4.4"

[workspace]
members = ["cli"]

[workspace.package]
repository = "https://github.com/icrayix/lessanvil"
readme = "README.md"
edition = "2021"
license = "MIT"

[profile.release]
strip = "debuginfo"


