[package]
name = "lessanvil-cli"
version = "0.1.0"
edition = "2021"
repository.workspace = true
readme.workspace = true

[dependencies]
lessanvil = { path = ".." }
anstream = "0.2.6" 
clap = { version = "4.1.1", features = ["derive"] }
ctrlc = "3.4.0" 
dialoguer = { version = "0.10.3", default-features = false}
env_logger = "0.10.0" 
indicatif = "0.17.3" 
log = "0.4.17" 
owo-colors = "3.5.0" 
serde_json = "1.0.95" 
num_cpus = "1.15.0" 
serde = "1.0.164"
