[package]
name = "lessanvil-cli"
version.workspace = true
edition = "2021"
license = "MIT"
repository.workspace = true
readme.workspace = true

[dependencies]
lessanvil = { path = ".." }
anstream = "0.2.6" 
ctrlc = "3.4.0" 
dialoguer = { version = "0.10.3", default-features = false }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
indicatif = "0.17.3" 
log = "0.4.17" 
owo-colors = "3.5.0" 
serde_json = "1.0.95" 
num_cpus = "1.15.0" 
serde = "1.0.164"
argh = "0.1.10"
