[package]
name = "lessanvil-cli"
version = "1.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
lessanvil = { path = ".." }
anstream = "0.5.0" 
ctrlc = "3.4.1" 
dialoguer = { version = "0.10.4", default-features = false }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color", "humantime"] }
indicatif = "0.17.6" 
log = "0.4.20" 
owo-colors = "3.4.0" 
serde_json = "1.0.107" 
num_cpus = "1.16.0" 
serde = "1.0.188"
argh = "0.1.12"
